close mongo client after initial snapshot is complete
there's no need to wait to go through the messages of all iterators, we just need to go through the initial snapshot messages